@@ -8,10 +8,13 @@ import com.example.application.models.Veranstaltungstermin;
 import java.util.ArrayList;
 import java.util.List;
 
-
-// TGGP ist das Akronym für Termin-Gruppenarbeit-Gruppe-Punkte und dient als Helper-Klasse, um eine
-// Repräsentation in einer Tabelle zu vereinfachen. Dabei ohne das Datenbankmodel verändern zu müssen,
-// hilft es pro Spalte in der Auswertung die jeweiligen Daten anzugeben
+/**
+ * TGGPHelper ist eine Hilfsklasse, die das Akronym für Termin-Gruppenarbeit-Gruppe-Punkte darstellt.
+ * Sie dient zur Vereinfachung der Darstellung in einer Tabelle, ohne das Datenbankmodell verändern zu müssen.
+ * Die Klasse hilft dabei, die jeweiligen Daten pro Spalte in der Auswertung anzugeben.
+ *
+ * @autor Leon
+ */
 public class TGGPHelper {
     Veranstaltungstermin veranstaltungtermin;
     Gruppenarbeit gruppenarbeit;
@@ -21,93 +24,219 @@ public class TGGPHelper {
     private int tablePos = 0;
     boolean used;
 
+    /**
+     * Gibt die Tabellenposition zurück.
+     *
+     * @return die Tabellenposition
+     *
+     * @autor Leon
+     */
     public int getTablePos() {
         return tablePos;
     }
 
+    /**
+     * Setzt die Tabellenposition.
+     *
+     * @param tablePos die neue Tabellenposition
+     *
+     * @autor Leon
+     */
     public void setTablePos(int tablePos) {
         this.tablePos = tablePos;
     }
 
+    /**
+     * Gibt den Veranstaltungstermin zurück.
+     *
+     * @return der Veranstaltungstermin
+     *
+     * @autor Leon
+     */
     public Veranstaltungstermin getVeranstaltungtermin() {
         return veranstaltungtermin;
     }
 
+    /**
+     * Setzt den Veranstaltungstermin.
+     *
+     * @param veranstaltungtermin der neue Veranstaltungstermin
+     *
+     * @autor Leon
+     */
     public void setVeranstaltungtermin(Veranstaltungstermin veranstaltungtermin) {
         this.veranstaltungtermin = veranstaltungtermin;
     }
 
+    /**
+     * Gibt den Titel der Gruppenarbeit und das Datum des Veranstaltungstermins zurück.
+     *
+     * @return der Titel der Gruppenarbeit und das Datum des Veranstaltungstermins
+     *
+     * @autor Leon
+     */
     public String getTerminAndGruppenarbeit() {
-        return veranstaltungtermin.getDatum().toString() + ", "+ gruppenarbeit.getTitel().toString();
+        return gruppenarbeit.getTitel().toString() + "\n" + veranstaltungtermin.getDatum().toString();
     }
 
+    /**
+     * Gibt die Gruppenarbeit zurück.
+     *
+     * @return die Gruppenarbeit
+     *
+     * @autor Leon
+     */
     public Gruppenarbeit getGruppenarbeit() {
         return gruppenarbeit;
     }
 
+    /**
+     * Setzt die Gruppenarbeit.
+     *
+     * @param gruppenarbeit die neue Gruppenarbeit
+     *
+     * @autor Leon
+     */
     public void setGruppenarbeit(Gruppenarbeit gruppenarbeit) {
         this.gruppenarbeit = gruppenarbeit;
     }
 
+    /**
+     * Gibt die erste Gruppe in der Liste zurück, falls vorhanden.
+     *
+     * @return die erste Gruppe oder null, wenn die Liste leer ist
+     *
+     * @autor Leon
+     */
     public Gruppe getGruppe() {
         if (!gruppe.isEmpty()) {
-            return gruppe.getFirst();
+            return gruppe.get(0);
         } else {
             return null;
         }
     }
 
+    /**
+     * Fügt eine Gruppe zur Liste hinzu.
+     *
+     * @param gruppe die hinzuzufügende Gruppe
+     *
+     * @autor Leon
+     */
     public void addGruppe(Gruppe gruppe) {
         this.gruppe.add(gruppe);
     }
 
+    /**
+     * Gibt die Punkte zurück.
+     *
+     * @return die Punkte
+     *
+     * @autor Leon
+     */
     public Float getPunkte() {
         return punkte;
     }
 
+    /**
+     * Setzt die Punkte.
+     *
+     * @param punkte die neuen Punkte
+     *
+     * @autor Leon
+     */
     public void setPunkte(Float punkte) {
         this.punkte = punkte;
     }
 
+    /**
+     * Überprüft, ob Punkte vorhanden sind.
+     *
+     * @return true, wenn Punkte >= 0 sind, sonst false
+     *
+     * @autor Leon
+     */
     public boolean hasPunkte() {
-        if (punkte >= 0f) {
-            return true;
-        } else {
-            return false;
-        }
+        return punkte >= 0f;
     }
 
+    /**
+     * Gibt die erste Gruppe und ein Häkchen zurück, wenn vorhanden.
+     * Entfernt die erste Gruppe aus der Liste nach Rückgabe.
+     *
+     * @return die erste Gruppe und ein Häkchen oder ein Hinweis, dass keine Gruppe vorhanden ist
+     *
+     * @autor Leon
+     */
     public String getGruppeAndCheckmark() {
         if (!gruppe.isEmpty()) {
             String unicodeString = "\u2705";
-            String res = ""+gruppe.getFirst();
-            gruppe.remove(gruppe.getFirst());
-                return res;
+            String res = "" + gruppe.get(0);
+            gruppe.remove(0);
+            return res;
         } else {
-         return  "Gehört zu keiner Gruppe!";
+            return "Gehört zu keiner Gruppe!";
         }
     }
 
+    /**
+     * Gibt den Zustand zurück, ob die Gruppe verwendet wird.
+     *
+     * @return true, wenn verwendet, sonst false
+     *
+     * @autor Leon
+     */
     public boolean getUsed() {
-    return used;
+        return used;
     }
 
+    /**
+     * Setzt den Zustand auf verwendet (true).
+     *
+     * @autor Leon
+     */
     public void setUsedTrue() {
         this.used = true;
     }
 
+    /**
+     * Setzt den Zustand auf nicht verwendet (false).
+     *
+     * @autor Leon
+     */
     public void setUsedFalse() {
         this.used = false;
     }
 
+    /**
+     * Setzt die Liste der Gruppen.
+     *
+     * @param gruppe die neue Liste der Gruppen
+     *
+     * @autor Leon
+     */
     public void setGruppe(List<Gruppe> gruppe) {
         this.gruppe = gruppe;
     }
 
+    /**
+     * Gibt die Liste der Teilnehmer zurück.
+     *
+     * @return die Liste der Teilnehmer
+     *
+     * @autor Leon
+     */
     public List<Teilnehmer> getTeilnehmer() {
         return teilnehmer;
     }
 
+    /**
+     * Setzt die Liste der Teilnehmer.
+     *
+     * @param teilnehmer die neue Liste der Teilnehmer
+     *
+     * @autor Leon
+     */
     public void setTeilnehmer(List<Teilnehmer> teilnehmer) {
         this.teilnehmer = teilnehmer;
     }
